--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,5 +17,10 @@
     <string name="text_status_form_task_fragment">Status</string>
     <string name="text_btn_save_form_task_fragment">Salvar</string>
 
+        <!-- Todo Fragment -->
+    <string name="text_task_list_empty_todo_fragment">Nenhuma tarefa cadastrada</string>
+    <string name="text_task_list_empty_doing_fragment">Nenhuma tarefa cadastrada</string>
+    <string name="text_task_list_empty_done_fragment">Nenhuma tarefa cadastrada</string>
+    
 
 </resources>
